Bring back display:flex and fix the overflow bug with min-width

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -5911,6 +5911,9 @@ $min2ColWidth: 400px;
       }
 
       & > .input {
+        display: flex;
+        align-items: center;
+
         .flex {
           flex-wrap: nowrap;
 
@@ -5960,6 +5963,12 @@ $min2ColWidth: 400px;
       @media screen and (min-width: $min2ColWidth) {
         width: calc(100% - var(--heading-width));
         padding-inline: var(--s) var(--m);
+      }
+
+      // Fixes https://github.com/craftcms/cms/issues/16473
+      // h/t https://stackoverflow.com/a/66689926/1688568
+      > * {
+        min-width: 0;
       }
     }
 
